--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>DROID Dataset Visualizer (Modified)</title>
+    <title>Dataset Visualizer </title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
     <script src="https://cdn.jsdelivr.net/npm/js-yaml@4.1.0/dist/js-yaml.min.js"></script>
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
@@ -91,8 +91,8 @@
 <body>
     <div class="container mt-3">
         <div class="row">
-            <h1 class="d-md-block d-none">DROID Dataset Visualizer</h1>
-            <h3 class="d-block d-md-none">DROID Dataset Visualizer</h3>
+            <h1 class="d-md-block d-none">Dataset Visualizer</h1>
+            <h3 class="d-block d-md-none">Dataset Visualizer</h3>
         </div>
 
         <div class="row">
@@ -142,10 +142,6 @@
             </div>
         </div>
     </div>
-
-    <footer class="container mt-3 text-center small">
-        <p>Dataset visualizer built by Jimmy Wu. Adapted to dynamic datasets.</p>
-    </footer>
 
     <script>
         (function () {
