--- a/index.html
+++ b/index.html
@@ -262,6 +262,8 @@
                                 else if (enKey === "item") {
                                     console.log("物品字段原始值:", val, "类型:", typeof val, "是否数组:", Array.isArray(val));
 
+                                    debugger ;
+
                                     ds[enKey] = [];
                                     let items = [];
 
