--- a/index.html
+++ b/index.html
@@ -275,21 +275,23 @@
                                         items = [val];
                                     }
 
-                                    items.forEach(itemObj => {
+                                    for (let idx = 0; idx < items.length; idx++) {
+                                        const itemObj = items[idx];
                                         const levels = [];
+
                                         for (let i = 1; i <= 5; i++) {
                                             const key = "level" + i;
-                                            if (itemObj && itemObj[key] && itemObj[key] !== "null") {
+                                            if (itemObj[key] && itemObj[key] !== "null") {
                                                 levels.push(String(itemObj[key]).trim());
                                             }
                                         }
+
                                         if (levels.length > 0) {
                                             ds[enKey].push(levels);
-                                        } else if (typeof itemObj === "string") {
-                                            // 兼容旧格式字符串路径
-                                            ds[enKey].push(itemObj.trim().split('/'));
                                         }
-                                    });
+                                    }
+
+
                                 } 
                                 // 声音 / 触觉传感器保存为字符串
                                 else if (enKey === "soundSensors" || enKey === "tactileSensors") {
