--- a/index.html
+++ b/index.html
@@ -307,6 +307,8 @@
                             datasets.push(ds);
                         }
 
+                        debugger ;
+
                         buildAllCheckboxGroups(datasets);
                         buildItemTree(datasets); // 构建物品树
                         applyFilters();
