--- a/index.html
+++ b/index.html
@@ -371,34 +371,42 @@
                     const tree = {};
 
                     // 构建分类树
-                    datasets.forEach(ds => {
+                    for (let i = 0; i < datasets.length; i++) {
+                        const ds = datasets[i];
                         if (Array.isArray(ds.item)) {
-                            ds.item.forEach(path => {
+                            for (let j = 0; j < ds.item.length; j++) {
+                                const path = ds.item[j];
                                 let node = tree;
 
                                 if (Array.isArray(path)) {
-                                    // 新结构: ["food","bread"]
-                                    path.forEach(level => {
+                                    // ✅ 新结构: ["food","bread"]
+                                    for (let k = 0; k < path.length; k++) {
+                                        const level = path[k];
                                         if (!node[level]) node[level] = {};
                                         node = node[level];
-                                    });
+                                    }
                                 } else if (typeof path === "string") {
-                                    // 旧结构: "food/bread"
-                                    path.trim().split('/').forEach(level => {
+                                    // ✅ 旧结构: "food/bread"
+                                    const parts = path.trim().split('/');
+                                    for (let k = 0; k < parts.length; k++) {
+                                        const level = parts[k];
                                         if (!node[level]) node[level] = {};
                                         node = node[level];
-                                    });
+                                    }
                                 }
-                            });
+                            }
                         }
-                    });
+                    }
 
                     // 渲染分类树
                     function renderNode(node, prefix) {
                         let html = "<ul class='item-tree'>";
-                        Object.keys(node).sort().forEach((key, i) => {
+                        const keys = Object.keys(node).sort();
+                        for (let i = 0; i < keys.length; i++) {
+                            const key = keys[i];
                             const id = prefix + '-' + i;
                             const safeKey = escapeHtml(key);
+
                             html += `<li>
                                         <label>
                                         <input type="checkbox" class="item-checkbox" data-field="item" id="${id}" value="${safeKey}">
@@ -407,7 +415,7 @@
                                         </label>`;
                             html += renderNode(node[key], id);
                             html += `</li>`;
-                        });
+                        }
                         html += "</ul>";
                         return html;
                     }
@@ -423,17 +431,28 @@
                     // 绑定全选/取消全选事件
                     block.addEventListener('change', (e) => {
                         const allBox = document.getElementById("item-all-checkbox");
-                        const children = Array.from(block.querySelectorAll('.item-checkbox'));
+                        const children = block.querySelectorAll('.item-checkbox');
 
                         if (e.target === allBox) {
-                            if (allBox.checked) children.forEach(cb => cb.checked = false);
+                            if (allBox.checked) {
+                                for (let i = 0; i < children.length; i++) {
+                                    children[i].checked = false;
+                                }
+                            }
                         } else if (e.target.classList.contains("item-checkbox")) {
-                            const anyChecked = children.some(cb => cb.checked);
+                            let anyChecked = false;
+                            for (let i = 0; i < children.length; i++) {
+                                if (children[i].checked) {
+                                    anyChecked = true;
+                                    break;
+                                }
+                            }
                             allBox.checked = !anyChecked;
                         }
                         applyFilters();
                     });
                 }
+
 
 
 
