--- a/index.html
+++ b/index.html
@@ -306,6 +306,9 @@
                             ds.path = String(fileName).replace(/\.yml$/i, '');
                             ds.id = String(idCounter++);
                             datasets.push(ds);
+
+                            debugger ;
+
                         }
 
                         buildAllCheckboxGroups(datasets);
