--- a/index.html
+++ b/index.html
@@ -2,73 +2,193 @@
 <html lang="zh">
 
 <head>
-    <meta charset="UTF-8">
-    <title>数据集筛选工具</title>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <title>Dataset Visualizer</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
+    <script src="https://cdn.jsdelivr.net/npm/js-yaml@4.1.0/dist/js-yaml.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.bundle.min.js"></script>
+
     <style>
         body {
-            font-family: Arial, sans-serif;
-            margin: 20px;
+            background-color: #f8f9fa;
+            font-family: "Segoe UI", "Helvetica Neue", Arial, sans-serif;
         }
 
-        .filter-group {
-            margin-bottom: 15px;
+        h1,
+        h3 {
+            font-weight: 600;
+            background: linear-gradient(90deg, #007bff, #00c6ff);
+            -webkit-background-clip: text;
+            -webkit-text-fill-color: transparent;
         }
 
-        .filter-group h5 {
-            margin: 5px 0;
+        .btn {
+            border-radius: 6px;
+            transition: all 0.2s ease-in-out;
         }
 
-        .checkbox-container {
-            margin-left: 10px;
+        .btn:hover {
+            transform: translateY(-1px);
+            box-shadow: 0 2px 6px rgba(0, 0, 0, 0.15);
         }
 
-        .item-tree {
+        /* 给整个标签栏加滚动条 */
+        #filters {
+            max-height: 75vh;
+            overflow-y: auto;
+            background: #fff;
+            border: 1px solid #ddd;
+            border-radius: 6px;
+            padding: 10px;
+        }
+
+        #filters h5 {
+            font-size: 1rem;
+            font-weight: 600;
+            margin-top: 10px;
+            border-left: 3px solid #007bff;
+            padding-left: 6px;
+        }
+
+        /* 去掉物品树的缩进 */
+        #filters ul {
             list-style: none;
-            padding-left: 20px;
+            padding-left: 0;
+            margin-left: 0;
         }
 
         .video-card {
-            border: 1px solid #ccc;
-            padding: 10px;
-            margin-bottom: 10px;
+            border-radius: 8px;
+            overflow: hidden;
+            transition: transform 0.2s ease, box-shadow 0.2s ease;
+            min-height: 120px;
+            cursor: pointer;
         }
 
-        .video-card h6 {
-            margin: 0 0 5px;
+        .video-card:hover {
+            transform: scale(1.03);
+            box-shadow: 0 6px 16px rgba(0, 0, 0, 0.2);
         }
 
-        .video-card pre {
-            background: #f8f8f8;
+        .video-card video {
+            border-radius: 8px;
+            background: #000;
+            display: block;
+        }
+
+        .video-card.selected video {
+            border: 3px solid orange !important;
+        }
+
+        .video-overlay {
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background-color: rgba(0, 0, 0, 0.65);
+            opacity: 0;
+            transition: opacity 0.25s ease;
+            color: white;
+            display: flex;
+            justify-content: center;
+            text-align: center;
+            align-items: center;
+            font-size: 0.8rem;
             padding: 5px;
-            overflow-x: auto;
+            z-index: 10;
+            pointer-events: none;
+        }
+
+        .video-card:hover .video-overlay {
+            opacity: 1;
+        }
+
+        .checkbox-container {
+            font-size: 0.95rem;
+            margin-bottom: -0.25rem;
+        }
+
+        .tree-toggle {
+            cursor: pointer;
+            color: gray;
+            font-size: 0.9rem;
+            display: inline-block;
+            width: 1em;
+            text-align: center;
+            margin-left: 4px;
+        }
+
+        .nested {
+            display: none;
+        }
+
+        .expanded>.nested {
+            display: block;
+        }
+
+        #downloadCommand {
+            font-family: monospace;
+            background: #f5f5f5;
+            border-radius: 6px;
         }
     </style>
 </head>
 
 <body>
-    <h3>数据集筛选工具</h3>
+    <div class="container mt-3">
+        <div class="row">
+            <h1 class="d-md-block d-none">Dataset Visualizer</h1>
+            <h3 class="d-block d-md-none">Dataset Visualizer</h3>
+        </div>
 
-    <div id="filterSection"></div>
-    <div id="itemFilter"></div>
-    <div id="filterError" style="color: red; display: none;"></div>
+        <div class="row">
+            <div class="col-md-2 px-1 col-12">
+                <div class="mb-2">
+                    <input type="text" id="searchBox" class="form-control form-control-sm" placeholder="搜索数据集名字">
+                </div>
+                <div class="btn-group d-flex mb-2" role="group">
+                    <button id="selectAllBtn" class="btn btn-sm btn-outline-primary flex-fill">全选</button>
+                    <button id="clearSelectionBtn" class="btn btn-sm btn-outline-secondary flex-fill">清空选择</button>
+                    <button id="downloadBtn" class="btn btn-sm btn-outline-success flex-fill">下载</button>
+                </div>
+                <div id="filters"></div>
+                <div id="filterError" style="color:red; display:none;"></div>
+            </div>
 
-    <div>
-        <button id="selectAllBtn">全选</button>
-        <button id="downloadBtn">生成下载命令</button>
+            <div class="col">
+                <div class="row" id="video-list"></div>
+                <div class="d-flex justify-content-center my-3">
+                    <button class="btn btn-outline-dark btn-sm mx-1" id="prevPage">上一页</button>
+                    <span class="align-self-center" id="pageInfo"></span>
+                    <button class="btn btn-outline-dark btn-sm mx-1" id="nextPage">下一页</button>
+                </div>
+            </div>
+        </div>
     </div>
 
-    <div id="videoList"></div>
-    <div>
-        <button id="prevPageBtn">上一页</button>
-        <span id="pageInfo"></span>
-        <button id="nextPageBtn">下一页</button>
-    </div>
-
-    <h4>下载命令</h4>
-    <textarea id="downloadCmd" rows="5" cols="80"></textarea>
-    <div>
-        <label><input type="radio" name="hubOption" value="huggingface" checked> Hugging Face</label>
-        <label><input type="radio" name="hubOption" value="openxlab"> OpenXLab</label>
+    <!-- 下载命令模态框 -->
+    <div class="modal fade" id="downloadModal" tabindex="-1" role="dialog">
+        <div class="modal-dialog modal-lg" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title">下载命令</h5>
+                    <button type="button" class="close" data-dismiss="modal">&times;</button>
+                </div>
+                <div class="modal-body">
+                    <div>
+                        <label><input type="radio" name="hubOption" value="huggingface" checked> HuggingFace</label>
+                        <label class="ml-3"><input type="radio" name="hubOption" value="modelscope"> ModelScope</label>
+                    </div>
+                    <textarea id="downloadCommand" class="form-control mt-2" rows="8" readonly></textarea>
+                </div>
+                <div class="modal-footer">
+                    <button class="btn btn-secondary" data-dismiss="modal">关闭</button>
+                </div>
+            </div>
+        </div>
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/js-yaml@4.1.0/dist/js-yaml.min.js"></script>
