--- a/index.html
+++ b/index.html
@@ -101,19 +101,28 @@
             z-index: 10;
             pointer-events: none;
 
-            /* 保持居中 */
+
+            /* 父容器：保持居中 */
             display: flex;
-            flex-direction: column;
-            justify-content: center;   /* 垂直居中 */
-            align-items: center;       /* 水平居中 */
+            justify-content: center;
+            /* 垂直居中 */
+            align-items: center;
+            /* 水平居中 */
             text-align: center;
-
-            /* 处理长内容 */
-            overflow-y: auto;          /* 超出时滚动 */
-            white-space: normal;       /* 自动换行 */
-            word-break: break-word;    /* 避免长单词溢出 */
-
         }
+
+        /* 子容器：可滚动文本区域 */
+        .video-overlay-content {
+            max-height: 90%;
+            /* 避免超出父容器 */
+            overflow-y: auto;
+            /* 允许滚动 */
+            white-space: normal;
+            /* 自动换行 */
+            word-break: break-word;
+            /* 避免长单词溢出 */
+        }
+
 
         .video-card:hover .video-overlay {
             opacity: 1;
@@ -517,7 +526,18 @@
 
                         const overlay = document.createElement('div');
                         overlay.className = 'video-overlay p-3';
-                        overlay.innerHTML = `<span><b>${escapeHtml(ds.name || ds.path)}</b><br>${escapeHtml(ds.description || '')}</span>`;
+                        //overlay.innerHTML = `<span><b>${escapeHtml(ds.name || ds.path)}</b><br>${escapeHtml(ds.description || '')}</span>`;
+
+                        overlay.innerHTML = `
+                            <div class="video-overlay-content">
+                                <div style="font-weight:bold; margin-bottom:4px;">
+                                ${escapeHtml(ds.name || ds.path)}
+                                </div>
+                                <div style="font-size:0.75rem; line-height:1.2;">
+                                ${escapeHtml(ds.description || '')}
+                                </div>
+                            </div>
+                            `;
 
                         col.appendChild(video);
                         col.appendChild(overlay);
